# invisible-code

./: .gitignore  README.md  decode_psr.py  proposed_structure.txt
optee_qemu/: .gitignore  benchmark.ipynb  changed_files_e4b1933eefb89b12834352fefd6cff2f669cabf7.txt  notes.txt
optee_qemu/2048_game/: .gitignore  2048.c  2048.h  Makefile  drm_setup.c  gen_random_data_elfs.sh
optee_qemu/arm-trusted-firmware/: last_commit.txt
optee_qemu/benchmark/: Android.mk  Makefile  build_benchmark_qemu.sh
optee_qemu/benchmark/host/: Makefile
optee_qemu/cfi_llvm_pass/: CMakeLists.txt  README.md  build.sh
optee_qemu/cfi_llvm_pass/IndirectCallCFIPass/: CMakeLists.txt
optee_qemu/cfi_llvm_pass/IndirectCallCFIPass/src/: IndirectCallCFIPass.cpp
optee_qemu/cfi_llvm_pass/elfinja/: elfinja.py  loguy.py  patch_secure_functions.py
optee_qemu/drm_standalone/: .gitignore  Makefile
optee_qemu/drm_standalone/standalone/: drm_init_arm64.c
optee_qemu/hello_blob/: Android.mk  Makefile  encrypt.py  vanish.sh
optee_qemu/hello_blob/host/: Makefile  hello_blob  main.c
optee_qemu/hello_blob/standalone/: Makefile  drm_init.blindsys.c  drm_init.c
optee_qemu/hello_blob/ta/: sub.mk  (+5 more)
optee_qemu/hello_ianni/: Android.mk
optee_qemu/hello_world/: .gitignore  Android.mk
optee_qemu/ncurses-6.0/: Makefile  config.status  edit_man.sh
optee_qemu/optee_client/: Makefile
optee_qemu/optee_os/: .ycm_extra_conf.py  tags
optee_qemu/optee_test/: Android.mk
optee_qemu/pacman-1.3/: Makefile  build_pacman_qemu.sh
optee_qemu/qemu/: configure
optee_qemu/test_syscall/: Android.mk  README.md
(+202 files in other folders)
